increase user role permissions